Before moving typebindings to vars